added the join us section to the homepage

--- a/Home/index.html
+++ b/Home/index.html
@@ -187,7 +187,7 @@
 </section>
 <section class="collab">
   <div class="jinus">
-    <h1>Join Us in Building Osun’s Innovation Future</h1>
+    <h1 class="juib">Join Us in <b class="build">Building</b> Osun’s Innovation<br>Future</h1>
   </div>
 </section>
  <footer class="flex-footer">
