made some changes in the stats section

--- a/About/index.html
+++ b/About/index.html
@@ -246,26 +246,26 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 text-center">
       <!-- Card 1 -->
       <div class="flex flex-col items-center justify-center p-10 rounded-2xl shadow-lg bg-[#05047f] text-white">
-        <div id="stat1" class="text-5xl font-extrabold">0</div>
-        <div class="mt-2 text-lg font-medium">Students Reached</div>
+        <div id="stat1" class="text-5xl font-extrabold" style="color:#7a7a7a ;">0</div>
+        <div class="mt-2 text-lg font-medium" style="color: #7a7a7a;">Students Reached</div>
       </div>
 
       <!-- Card 2 -->
       <div class="flex flex-col items-center justify-center p-10 rounded-2xl shadow-lg bg-[#eaeaea] text-gray-900">
-        <div id="stat2" class="text-5xl font-extrabold">0</div>
-        <div class="mt-2 text-lg font-medium">Women Entrepreneurs Supported</div>
+        <div id="stat2" class="text-5xl font-extrabold" style="color: #7a7a7a;">0</div>
+        <div class="mt-2 text-lg font-medium" style="color: #7a7a7a;">Women Entrepreneurs Supported</div>
       </div>
 
       <!-- Card 3 -->
       <div class="flex flex-col items-center justify-center p-10 rounded-2xl shadow-lg bg-[#ffd200] text-gray-900">
-        <div id="stat3" class="text-5xl font-extrabold">0</div>
-        <div class="mt-2 text-lg font-medium">Communities Trained on Cybersecurity</div>
+        <div id="stat3" class="text-5xl font-extrabold" style="color: #1f137c;">0</div>
+        <div class="mt-2 text-lg font-medium" style="color: #1f137c;">Communities Trained on Cybersecurity</div>
       </div>
 
       <!-- Card 4 -->
       <div class="flex flex-col items-center justify-center p-10 rounded-2xl shadow-lg bg-[#05047f] text-white">
-        <div id="stat4" class="text-5xl font-extrabold">0</div>
-        <div class="mt-2 text-lg font-medium">Students Introduced to Maker Culture</div>
+        <div id="stat4" class="text-5xl font-extrabold" style="color: #7a7a7a;">0</div>
+        <div class="mt-2 text-lg font-medium" style="color: #7aa7a7;">Students Introduced to Maker Culture</div>
       </div>
     </div>
   </div>
@@ -316,6 +316,7 @@
     }
   </script>
 </section>
+
 
 </body>
 </html>
