--- a/Home/index.html
+++ b/Home/index.html
@@ -188,6 +188,14 @@
 <section class="collab">
   <div class="jinus">
     <h1 class="juib">Join Us in <b class="">Building</b> Osun’s Innovation<br>Future</h1>
+    <p class="tagline">Whether you are a student, entrepreneur, or partner, there’s a place for you at Oroki Hub. Be part of our mission to<br>
+       drive innovation and opportunity for all.</p>
+    <p class="tgln"><a href="#"><button class="jth">Join the Hub</button></a></p>
+  </div>
+</section>
+<section>
+  <div>
+
   </div>
 </section>
  <footer class="flex-footer">
