added 2 extra icons to the footer of the homepage

--- a/Home/index.html
+++ b/Home/index.html
@@ -205,6 +205,7 @@
             and inclusive innovation.
           </p>
           <img src="C:\Users\Owner\Downloads\facebook.png" alt="facebook logo" class="fb">
+          <img src="C:\Users\Owner\Downloads\twitter.svg" alt="twitter logo" class="tw">
         </div>
       </div>
     </section>
