made some changes to the partner section on the homepage

--- a/Home/index.html
+++ b/Home/index.html
@@ -128,13 +128,13 @@
   <h2 class="partners">Our Partners</h2>
   <div class="flex-partners-container">
     <div class="flex-partners-container-1">
-      <img src="C:\Users\Owner\Pictures\cropped-cropped-NITDA-Logo-new-03.png" alt="NITDA logo" class="nitda">
+        <img src="C:\Users\Owner\Pictures\cropped-cropped-NITDA-Logo-new-03.png" alt="NITDA logo" class="nitda">
     </div>
     <div class="flex-partners-container-2">
-      <img src="C:\Users\Owner\Pictures\osun-tag-e1757205944317.jpg" alt="osun state logo" class="osun">
+        <img src="C:\Users\Owner\Pictures\osun-tag-e1757205944317.jpg" alt="osun state logo" class="osun">
     </div>
     <div class="flex-partners-container-3">
-      <img src="C:\Users\Owner\Pictures\AIN-LG-2-1.webp" alt="ain logo" class="ain">
+      <img src="C:\Users\Owner\Downloads\AIN-LG-2-1.png" alt="ain logo" class="ain">
     </div>
   </div>
 </section>
@@ -204,8 +204,20 @@
             digital skills, entrepreneurship,<br>
             and inclusive innovation.
           </p>
-          <img src="C:\Users\Owner\Downloads\facebook.png" alt="facebook logo" class="fb">
-          <img src="C:\Users\Owner\Downloads\twitter.svg" alt="twitter logo" class="tw">
+          <div class="flex-logo-container">
+            <div class="flex-logo-container-1">
+              <img src="C:\Users\Owner\Downloads\facebook.png" alt="facebook logo" class="fb">
+            </div>
+            <div class="flex-logo-container-2">
+              <img src="C:\Users\Owner\Downloads\twitter.png" alt="twitter logo" class="tw">
+            </div>
+            <div class="flex-logo-container-3">
+              <img src="C:\Users\Owner\Downloads\instagram.svg" alt="instagram logo" class="ig">
+            </div>
+            <div class="flex-logo-container-4">
+              <img src="C:\Users\Owner\Downloads\linkedin.svg" alt="linkedin logo" class="ln">
+            </div>
+          </div>
         </div>
       </div>
     </section>
