--- a/Programs/index.html
+++ b/Programs/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -323,11 +323,11 @@
           </p>
         </div>
       </div>
+      
+          </div>
     </section>
  </footer>
 </section>
     
-</body>
-</html>
 </body>
 </html>
