--- a/About/index.html
+++ b/About/index.html
@@ -317,48 +317,88 @@
   </script>
 </section>
 <section class="py-16 bg-gray-50">
-  <div class="text-center mb-12">
-    <h2 id="impact-heading" class="text-3xl font-extrabold sm:text-4xl text-[#05047f]">
-      Meet Our Team
-    </h2>
-  </div>
+<div class="container">
+  <div class="card-1">
+    <div class="text-center mb-12">
+      <h2 id="impact-heading" class="text-3xl font-extrabold sm:text-4xl text-[#05047f]">
+        Meet Our Team
+      </h2>
+    </div>
 
-  <!-- Team Container (aligned to left) -->
-  <div class="flex flex-wrap gap-8 justify-start px-8">
-    <!-- Card 1 -->
-    <div class="flex flex-col bg-white shadow-lg border border-slate-200 rounded-2xl w-80 sm:w-96">
-      <div class="m-4 overflow-hidden rounded-full flex justify-center items-center">
-        <img
-          class="h-40 w-40 rounded-full border-4 border-white shadow-md object-cover"
-          src="download.jpeg"
-          alt="profile-picture"
-        />
-      </div>
+    <!-- Team Container (aligned to left) -->
+    <div class="flex flex-wrap gap-8 justify-start px-8">
+      <!-- Card 1 -->
+      <div class="flex flex-col bg-white shadow-lg border border-slate-200 rounded-2xl w-80 sm:w-96">
+        <div class="m-4 overflow-hidden rounded-full flex justify-center items-center">
+          <img
+            class="h-40 w-40 rounded-full border-4 border-white shadow-md object-cover"
+            src="download.jpeg"
+            alt="profile-picture"
+          />
+        </div>
 
-      <div class="p-6 text-center">
-        <h4 class="mb-1 text-2xl font-semibold text-slate-800">
-          Rukayat Adekola
-        </h4>
-        <p class="text-sm font-semibold text-slate-500 uppercase">
-          Co-founder/CEO
-        </p>
-        <p class="text-base text-slate-600 mt-4 font-light" id="ru">
-          A professional Project Manager and Digital Media Expert with 4 years experience
-          working with youths and SMEs.
-        </p>
-      </div>
+        <div class="p-6 text-center">
+          <h4 class="mb-1 text-2xl font-semibold text-slate-800">
+            Rukayat Adekola
+          </h4>
+          <p class="text-sm font-semibold text-slate-500 uppercase">
+            Co-founder/CEO
+          </p>
+          <p class="text-base text-slate-600 mt-4 font-light" id="ru">
+            A professional Project Manager and Digital Media Expert with 4 years experience
+            working with youths and SMEs.
+          </p>
+        </div>
 
-      <!-- Social Icons -->
-      <div class="flex items-center justify-center space-x-4 mb-6">
-        <a href="#" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-600 transition">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="#" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-700 transition">
-          <i class="fab fa-linkedin-in"></i>
-        </a>
+        <!-- Social Icons -->
+        <div class="flex items-center justify-center space-x-4 mb-6">
+          <a href="#" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-600 transition">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="#" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-700 transition">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+        </div>
       </div>
     </div>
-  </div>
+    </div>
+    
+    <div class="flex flex-wrap gap-8 justify-start px-8">
+      <!-- Card 1 -->
+      <div class="flex flex-col bg-white shadow-lg border border-slate-200 rounded-2xl w-80 sm:w-96">
+        <div class="m-4 overflow-hidden rounded-full flex justify-center items-center">
+          <img
+            class="h-40 w-40 rounded-full border-4 border-white shadow-md object-cover"
+            src="download (1).jpeg"
+            alt="profile-picture"
+          />
+        </div>
+
+        <div class="p-6 text-center">
+          <h4 class="mb-1 text-2xl font-semibold text-slate-800">
+            Lukaman Adeoti
+          </h4>
+          <p class="text-sm font-semibold text-slate-500 uppercase">
+            Co-founder
+          </p>
+          <p class="text-base text-slate-600 mt-4 font-light" id="ru">
+            Digital entrepreneur, community builder, and digital literacy advocate with over 6 years of experience empowering SMEs and youth in Osun State.
+           
+          </p>
+        </div>
+
+        <!-- Social Icons -->
+        <div class="flex items-center justify-center space-x-4 mb-6">
+          <a href="#" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-600 transition">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="#" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-700 transition">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+</div>
 </section>
 
 
