made some changes to the homepage

--- a/Home/index.html
+++ b/Home/index.html
@@ -212,7 +212,7 @@
               <img src="C:\Users\Owner\Downloads\twitter.png" alt="twitter logo" class="tw">
             </div>
             <div class="flex-logo-container-3">
-              <img src="C:\Users\Owner\Downloads\instagram.svg" alt="instagram logo" class="ig">
+              <img src="C:\Users\Owner\Downloads\instagram.png" alt="instagram logo" class="ig">
             </div>
             <div class="flex-logo-container-4">
               <img src="C:\Users\Owner\Downloads\linkedin.svg" alt="linkedin logo" class="ln">
