made a few changes and some additions

--- a/About/index.html
+++ b/About/index.html
@@ -395,5 +395,18 @@
     </div>
   </div>
 </section>
+<section>
+ <section class="contact-section">
+  <p class="section-subtitle">Get In Touch</p>
+  <h1 class="section-title">
+    Let’s Work Together To <br> Build Osun’s Future
+  </h1>
+  <p class="section-desc">
+    Partner with Oroki Hub to empower youth, support SMEs, and strengthen our
+    local innovation ecosystem.
+  </p>
+</section>
+
+</section>
 </body>
 </html>
