--- a/Programs/index.html
+++ b/Programs/index.html
@@ -310,7 +310,7 @@
           <p class="text-sm text-gray-200">official@orokihub.com.ng</p>
         </div>
       </div>
-     <div class="flex items-center bg-[#2196F3] text-white rounded-lg px-4 py-2 w-[280px] shadow">
+     <div class="flex items-center bg-[#2196F3] text-white rounded-lg px-3 py-2 w-[280px] shadow">
       <div class="bg-yellow-400 p-2 rounded-full mr-3 flex items-center justify-center">
         </div>
         <div>
@@ -318,7 +318,9 @@
           <p class="text-sm text-gray-200">+234 816 070 0224</p>
         </div>
       </div>
-    </div>
+    </div> </section>
+    <section style="padding-left: 2%; padding-bottom: 4%;padding-top: 2%;border-radius: 15%;">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.9994292928945!2d4.531707674055238!3d7.789883607154995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x10378742fd3a63c9%3A0xf06d2e43b7a5ff56!2sOroki%20Innovation%20Hub!5e0!3m2!1sen!2sng!4v1761057005576!5m2!1sen!2sng" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
 <section>
   <footer class="flex-footer">
