--- a/About/index.html
+++ b/About/index.html
@@ -396,15 +396,42 @@
   </div>
 </section>
 <section>
- <section class="contact-section">
-  <p class="section-subtitle">Get In Touch</p>
-  <h1 class="section-title">
-    Let’s Work Together To <br> Build Osun’s Future
+ <section class="px-6 py-16 max-w-5xl mx-auto text-gray-800 font-sans">
+  <p class="text-blue-600 font-semibold uppercase">Get In Touch</p>
+
+  <h1 class="text-4xl md:text-5xl font-bold text-blue-900 mt-2 leading-tight">
+    Let’s Work Together To <br class="hidden md:block"> Build Osun’s Future
   </h1>
-  <p class="section-desc">
-    Partner with Oroki Hub to empower youth, support SMEs, and strengthen our
-    local innovation ecosystem.
+
+  <p class="text-gray-500 mt-3 max-w-2xl">
+    Partner with Oroki Hub to empower youth, support SMEs, and strengthen our local innovation ecosystem.
   </p>
+
+  <div class="mt-8 flex flex-col md:flex-row gap-5">
+`    <div class="flex items-center bg-blue-900 text-white px-6 py-5 rounded-2xl gap-3 w-full md:w-auto shadow">
+      <div class="bg-white/20 p-3 rounded-full">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="white" stroke-width="1.5">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 8.25l-9.75 6.75L2.25 8.25m19.5 0v8.25a2.25 2.25 0 01-2.25 2.25H4.5a2.25 2.25 0 01-2.25-2.25V8.25" />
+        </svg>
+      </div>
+      <div>
+        <p class="font-semibold text-lg">Email</p>
+        <p class="text-sm">official@orokihub.com.ng</p>
+      </div>
+    </div>
+
+    <div class="flex items-center bg-blue-500 text-white px-6 py-5 rounded-2xl gap-3 w-full md:w-auto shadow">
+      <div class="bg-white/20 p-3 rounded-full">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="white" stroke-width="1.5">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75l9.75 6.75L21.75 6.75m-19.5 0v10.5A2.25 2.25 0 004.5 19.5h15a2.25 2.25 0 002.25-2.25V6.75" />
+        </svg>
+      </div>
+      <div>
+        <p class="font-semibold text-lg">Phone</p>
+        <p class="text-sm">+234 816 070 0224</p>
+      </div>
+    </div>
+  </div>
 </section>
 
 </section>
