--- a/About/index.html
+++ b/About/index.html
@@ -396,43 +396,60 @@
   </div>
 </section>
 <section>
- <section class="px-6 py-16 max-w-5xl mx-auto text-gray-800 font-sans">
-  <p class="text-blue-600 font-semibold uppercase">Get In Touch</p>
+<section class="py-16 px-6 text-gray-800 font-sans ml-6">
+  <p class="text-blue-600 uppercase tracking-wide font-semibold">Get In Touch</p>
 
   <h1 class="text-4xl md:text-5xl font-bold text-blue-900 mt-2 leading-tight">
     Let’s Work Together To <br class="hidden md:block"> Build Osun’s Future
   </h1>
 
   <p class="text-gray-500 mt-3 max-w-2xl">
-    Partner with Oroki Hub to empower youth, support SMEs, and strengthen our local innovation ecosystem.
+    Partner with Oroki Hub to empower youth, support SMEs and strengthen our local innovation system.
   </p>
 
-  <div class="mt-8 flex flex-col md:flex-row gap-5">
-`    <div class="flex items-center bg-blue-900 text-white px-6 py-5 rounded-2xl gap-3 w-full md:w-auto shadow">
-      <div class="bg-white/20 p-3 rounded-full">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="white" stroke-width="1.5">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 8.25l-9.75 6.75L2.25 8.25m19.5 0v8.25a2.25 2.25 0 01-2.25 2.25H4.5a2.25 2.25 0 01-2.25-2.25V8.25" />
+  <div class="mt-10 flex flex-col md:flex-row gap-6">
+    <!-- Email -->
+    <div class="flex items-center bg-blue-900 text-white px-6 py-5 rounded-2xl gap-4 w-full md:w-auto">
+      <div class="bg-[#1d4ed8] p-3 rounded-full flex items-center justify-center">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="white" viewBox="0 0 24 24" stroke-width="1.6" class="w-5 h-5">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M21.75 8.25l-9.75 6.75L2.25 8.25m19.5 0v8.25A2.25 2.25 0 0119.5 18.75H4.5A2.25 2.25 0 012.25 16.5V8.25" />
         </svg>
       </div>
       <div>
-        <p class="font-semibold text-lg">Email</p>
-        <p class="text-sm">official@orokihub.com.ng</p>
+        <p class="text-lg font-semibold leading-tight">Email</p>
+        <p class="text-sm opacity-90">official@orokihub.com.ng</p>
       </div>
     </div>
 
-    <div class="flex items-center bg-blue-500 text-white px-6 py-5 rounded-2xl gap-3 w-full md:w-auto shadow">
-      <div class="bg-white/20 p-3 rounded-full">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="white" stroke-width="1.5">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75l9.75 6.75L21.75 6.75m-19.5 0v10.5A2.25 2.25 0 004.5 19.5h15a2.25 2.25 0 002.25-2.25V6.75" />
+    <!-- Phone -->
+    <div class="flex items-center bg-blue-500 text-white px-6 py-5 rounded-2xl gap-4 w-full md:w-auto">
+      <div class="p-3 bg-[#facc15] rounded-full flex items-center justify-center">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="black" viewBox="0 0 24 24" stroke-width="1.6" class="w-5 h-5">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.5a1.5 1.5 0 00-1.35-1.494l-3.9-.35a1.5 1.5 0 00-1.29.72l-.9 1.44a11.959 11.959 0 01-5.46-5.46l1.44-.9a1.5 1.5 0 00.72-1.29l-.35-3.9A1.5 1.5 0 007.5 3H6a2.25 2.25 0 00-2.25 2.25v1.5z" />
         </svg>
       </div>
       <div>
-        <p class="font-semibold text-lg">Phone</p>
-        <p class="text-sm">+234 816 070 0224</p>
+        <p class="text-lg font-semibold leading-tight">Phone</p>
+        <p class="text-sm opacity-90">+234 816 070 0224</p>
       </div>
     </div>
   </div>
+
+  <!-- Map (wider but shorter) -->
+  <div class="mt-12">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.9994794574545!2d4.531707675052177!3d7.789878292230013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x10378742fd3a63c9%3A0xf06d2e43b7a5ff56!2sOroki%20Innovation%20Hub!5e0!3m2!1sen!2sng!4v1761063248604!5m2!1sen!2sng"
+      width="680" height="360"
+      style="border:0; border-radius:10px; margin-top:10px"
+      allowfullscreen loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </div>
 </section>
+
+
 
 </section>
 </body>
