--- a/About/index.html
+++ b/About/index.html
@@ -12,7 +12,7 @@
   />
 </head>
 <body>
-<header class="bg-gray-900" style="background-color: white;"  >
+<header  style="background-color: white;" class="sticky top-0 z-50 bg-white shadow-md"   >
   <nav aria-label="Global" class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8">
     <div class="flex lg:flex-1">
       <a href="#" class="-m-1.5 p-1.5">
@@ -155,21 +155,26 @@
 
       <div class="flex flex-col items-center justify-center bg-blue-900 text-white rounded-2xl p-10 shadow-xl hover:shadow-2xl hover:scale-105 transition-all duration-300">
         <div class="bg-blue-500 p-6 rounded-full mb-6">
-          <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" alt="Innovation Icon" class="w-10 h-10">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 0 0 1.5-.189m-1.5.189a6.01 6.01 0 0 1-1.5-.189m3.75 7.478a12.06 12.06 0 0 1-4.5 0m3.75 2.383a14.406 14.406 0 0 1-3 0M14.25 18v-.192c0-.983.658-1.823 1.508-2.316a7.5 7.5 0 1 0-7.517 0c.85.493 1.509 1.333 1.509 2.316V18" />
+</svg>
+
         </div>
         <h3 class="text-xl font-semibold">Innovation</h3>
       </div>
 
       <div class="flex flex-col items-center justify-center bg-gray-100 text-blue-900 rounded-2xl p-10 shadow-md hover:shadow-lg hover:scale-105 transition-all duration-300">
         <div class="bg-blue-900 p-6 rounded-full mb-6">
-          <img src="../About/download (1).jpeg" alt="Collaboration Icon" class="w-10 h-10 invert">
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000" viewBox="0 0 256 256"><path d="M254.3,107.91,228.78,56.85a16,16,0,0,0-21.47-7.15L182.44,62.13,130.05,48.27a8.14,8.14,0,0,0-4.1,0L73.56,62.13,48.69,49.7a16,16,0,0,0-21.47,7.15L1.7,107.9a16,16,0,0,0,7.15,21.47l27,13.51,55.49,39.63a8.06,8.06,0,0,0,2.71,1.25l64,16a8,8,0,0,0,7.6-2.1l55.07-55.08,26.42-13.21a16,16,0,0,0,7.15-21.46Zm-54.89,33.37L165,113.72a8,8,0,0,0-10.68.61C136.51,132.27,116.66,130,104,122L147.24,80h31.81l27.21,54.41ZM41.53,64,62,74.22,36.43,125.27,16,115.06Zm116,119.13L99.42,168.61l-49.2-35.14,28-56L128,64.28l9.8,2.59-45,43.68-.08.09a16,16,0,0,0,2.72,24.81c20.56,13.13,45.37,11,64.91-5L188,152.66Zm62-57.87-25.52-51L214.47,64,240,115.06Zm-87.75,92.67a8,8,0,0,1-7.75,6.06,8.13,8.13,0,0,1-1.95-.24L80.41,213.33a7.89,7.89,0,0,1-2.71-1.25L51.35,193.26a8,8,0,0,1,9.3-13l25.11,17.94L126,208.24A8,8,0,0,1,131.82,217.94Z"></path></svg>
         </div>
         <h3 class="text-xl font-semibold">Collaboration</h3>
       </div>
 
       <div class="flex flex-col items-center justify-center bg-blue-600 text-white rounded-2xl p-10 shadow-xl hover:shadow-2xl hover:scale-105 transition-all duration-300">
         <div class="bg-blue-900 p-6 rounded-full mb-6">
-          <img src="https://cdn-icons-png.flaticon.com/512/1025/1025911.png" alt="Sustainability Icon" class="w-10 h-10 invert">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 0 0 1.5-.189m-1.5.189a6.01 6.01 0 0 1-1.5-.189m3.75 7.478a12.06 12.06 0 0 1-4.5 0m3.75 2.383a14.406 14.406 0 0 1-3 0M14.25 18v-.192c0-.983.658-1.823 1.508-2.316a7.5 7.5 0 1 0-7.517 0c.85.493 1.509 1.333 1.509 2.316V18" />
+</svg>
         </div>
         <h3 class="text-xl font-semibold">Sustainability</h3>
       </div>
@@ -306,7 +311,6 @@
 
   <div class="flex flex-wrap justify-center gap-8 px-8">
     
-    <!-- Card 1 -->
     <div class="bg-white shadow-lg border border-slate-200 rounded-2xl w-80 sm:w-96 text-center">
       <div class="m-4 flex justify-center">
         <img class="h-40 w-40 rounded-full border-4 border-white shadow-md object-cover" src="download.jpeg" alt="Rukayat Adekola" />
@@ -317,12 +321,11 @@
         <p class="text-base text-slate-600 mt-4 font-light">A professional Project Manager and Digital Media Expert with 4 years experience working with youths and SMEs.</p>
       </div>
       <div class="flex justify-center space-x-4 mb-6">
-        <a href="#" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-600 transition"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-700 transition"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.facebook.com/thesocialrukayat/" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-600 transition"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://ng.linkedin.com/in/rukayat-adekola-098769228" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-700 transition"><i class="fab fa-linkedin-in"></i></a>
       </div>
     </div>
 
-    <!-- Card 2 -->
     <div class="bg-white shadow-lg border border-slate-200 rounded-2xl w-80 sm:w-96 text-center">
       <div class="m-4 flex justify-center">
         <img class="h-40 w-40 rounded-full border-4 border-white shadow-md object-cover" src="download (1).jpeg" alt="Lukman Adeoti" />
@@ -333,12 +336,11 @@
         <p class="text-base text-slate-600 mt-4 font-light">Digital entrepreneur, community builder, and digital literacy advocate with over 6 years of experience empowering SMEs and youth in Osun State.</p>
       </div>
       <div class="flex justify-center space-x-4 mb-6">
-        <a href="#" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-600 transition"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-700 transition"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.facebook.com/lukmanadeoti224/" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-600 transition"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://ng.linkedin.com/in/lukman-adeoti" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-700 transition"><i class="fab fa-linkedin-in"></i></a>
       </div>
     </div>
 
-    <!-- Card 3 -->
     <div class="bg-white shadow-lg border border-slate-200 rounded-2xl w-80 sm:w-96 text-center">
       <div class="m-4 flex justify-center">
         <img class="h-40 w-40 rounded-full border-4 border-white shadow-md object-cover" src="Rukayat-Adekola (1).jpg" alt="Monsurat Adekola" />
@@ -348,8 +350,8 @@
         <p class="text-sm font-semibold text-slate-500 uppercase">Hub Manager</p>
       </div>
       <div class="flex justify-center space-x-4 mb-6">
-        <a href="#" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-600 transition"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-700 transition"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.facebook.com/thesocialrukayat/" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-600 transition"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://ng.linkedin.com/in/rukayat-adekola-098769228" class="bg-gray-400 text-white rounded-full p-3 hover:bg-blue-700 transition"><i class="fab fa-linkedin-in"></i></a>
       </div>
     </div>
 
@@ -408,7 +410,6 @@
   </p>
 
   <div class="mt-10 flex flex-col md:flex-row gap-6">
-    <!-- Email -->
     <div class="flex items-center bg-blue-900 text-white px-6 py-5 rounded-2xl gap-4 w-full md:w-auto">
       <div class="bg-[#1d4ed8] p-3 rounded-full flex items-center justify-center">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="white" viewBox="0 0 24 24" stroke-width="1.6" class="w-5 h-5">
@@ -422,7 +423,6 @@
       </div>
     </div>
 
-    <!-- Phone -->
     <div class="flex items-center bg-blue-500 text-white px-6 py-5 rounded-2xl gap-4 w-full md:w-auto">
       <div class="p-3 bg-[#facc15] rounded-full flex items-center justify-center">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="black" viewBox="0 0 24 24" stroke-width="1.6" class="w-5 h-5">
@@ -437,7 +437,6 @@
     </div>
   </div>
 
-  <!-- Map (wider but shorter) -->
   <div class="mt-12">
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.9994794574545!2d4.531707675052177!3d7.789878292230013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x10378742fd3a63c9%3A0xf06d2e43b7a5ff56!2sOroki%20Innovation%20Hub!5e0!3m2!1sen!2sng!4v1761063248604!5m2!1sen!2sng"
@@ -448,9 +447,68 @@
     </iframe>
   </div>
 </section>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
+<footer class="bg-[#000a7c] text-white py-14 px-6 font-sans">
+  <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-10">
+    <div>
+      <img src="image-1-300x164.png" alt="Oroki Hub Logo" class="mb-4 w-28">
+      <p class="text-sm leading-relaxed text-gray-200">
+        Empowering Osun’s innovators, SMEs, and communities through digital skills,
+        entrepreneurship, and inclusive innovation.
+      </p>
+      <div class="flex space-x-3 mt-5">
+        <a href="https://www.facebook.com/orokihub/" class="w-8 h-8 flex items-center justify-center bg-white/10 rounded hover:bg-blue-500 transition"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="w-8 h-8 flex items-center justify-center bg-white/10 rounded hover:bg-blue-500 transition"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/orokihub/" class="w-8 h-8 flex items-center justify-center bg-white/10 rounded hover:bg-blue-500 transition"><i class="fab fa-instagram"></i></a>
+        <a href="https://ng.linkedin.com/company/orokihub" class="w-8 h-8 flex items-center justify-center bg-white/10 rounded hover:bg-blue-500 transition"><i class="fab fa-linkedin-in"></i></a>
+      </div>
+    </div>
+
+    <div>
+      <h3 class="text-blue-400 text-lg font-semibold mb-4">Other Pages</h3>
+      <ul class="space-y-2 text-sm text-gray-200">
+        <li><a href="../programs/index.html" class="hover:text-yellow-400 transition">Programs</a></li>
+        <li><a href="../about/index.html" class="hover:text-yellow-400 transition">About</a></li>
+        <li><a href="../impact/index.html" class="hover:text-yellow-400 transition">Impact</a></li>
+      </ul>
+    </div>
+
+    <div>
+      <h3 class="text-blue-400 text-lg font-semibold mb-4">Quick Links</h3>
+      <ul class="space-y-2 text-sm text-gray-200">
+        <li><a href="#" class="hover:text-yellow-400 transition">Privacy Policy</a></li>
+        <li><a href="#" class="hover:text-yellow-400 transition">Terms of Use</a></li>
+        <li><a href="#" class="hover:text-yellow-400 transition">Disclaimer</a></li>
+        <li><a href="#" class="hover:text-yellow-400 transition">FAQ</a></li>
+      </ul>
+    </div>
+
+    <div>
+      <h3 class="text-blue-400 text-lg font-semibold mb-4">Contact Info</h3>
+      <ul class="space-y-3 text-sm text-gray-200">
+        <li class="flex items-start gap-3">
+          <i class="fas fa-map-marker-alt text-yellow-400 mt-1"></i>
+          <p>5, Elder Eludunni Oladimeji Street, Oroki Estate, Osogbo</p>
+        </li>
+        <li class="flex items-start gap-3">
+          <i class="fas fa-envelope text-yellow-400 mt-1"></i>
+          <a href="mailto:official@orokihub.com.ng" class="hover:underline">official@orokihub.com.ng</a>
+        </li>
+        <li class="flex items-start gap-3">
+          <i class="fas fa-phone-alt text-yellow-400 mt-1"></i>
+          <a href="tel:+2348160700224" class="hover:underline">+234 816 070 0224</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="border-t border-white/20 mt-10 pt-6 text-center text-xs text-gray-300">
+    © 2025 Oroki Innovation Hub. All Rights Reserved.
+  </div>
+</footer>
 
 
 
-</section>
 </body>
 </html>
