added a new container to the service section in the homepage

--- a/Home/index.html
+++ b/Home/index.html
@@ -144,14 +144,17 @@
   </div>
 </section>
 <section>
-  <h3 class="srvcs"><b>Our Services</b></h3>
-  <div class="flex-services-container">
-    <div class="flex-services-container-1"></div>
-    <div class="flex-services-container-2"></div>
-  </div>
-  <div>
-    <div></div>
-    <div></div>
+  <div class="flex-service-container">
+    <div class="flex-service-container-1">
+      <div>
+        <h3></h3>
+      </div>
+      <div></div>
+    </div>
+    <div class="flex-service-container-2">
+      <div></div>
+      <div></div>
+    </div>
   </div>
 </section>
 <section class="bg-white py-12 px-8 ">
@@ -282,6 +285,46 @@
     }
   </script>
 </section>
+<section style="padding-left: 2%; padding-top: 10%;">
+  <p class="zip">
+    <b>Get In Touch</b>
+  </p><br>
+  <p class="col">
+    Let’s Work Together To <br>
+    Build Osun’s Future
+  </p><br>
+  <p class="man">
+    Partner with Oroki Hub to empower youth, support SMEs, and strengthen our <br>
+    local innovation ecosystem
+  </p>
+</section>
+<section class=" mx-auto px-8 py-16">
+    <div class="flex flex-col md:flex-row gap-6">
+     <div class="flex items-left bg-[#0B1D8F] text-white rounded-lg px-6 py-2 w-[280px] shadow">
+      <div class="bg-[#2430a3] p-2 rounded-full mr-1">
+         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z" /></svg>
+        </div>
+        <div style="padding-top: 4%;">
+          <h4 class="font-semibold text-white text-lg">📧Email</h4>
+          <p class="text-sm text-gray-200">official@orokihub.com.ng</p>
+        </div>
+      </div>
+     <div class="flex items-center bg-[#2196F3] text-white rounded-lg px-4 py-2 w-[280px] shadow">
+      <div class="bg-yellow-400 p-2 rounded-full mr-3 flex items-center justify-center">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-blue-900" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5h2l3.6 7.59-1.35 2.44A1 1 0 008 17h8a1 1 0 00.9-.55l3.6-7.2A1 1 0 0020 8H7.21L6.27 5H3z" />
+          </svg>
+        </div>
+        <div>
+          <h4 class="font-semibold text-white text-lg">Phone</h4>
+          <p class="text-sm text-gray-200">+234 816 070 0224</p>
+        </div>
+      </div>
+    </div>
+  </section>
+   <section style="padding-left: 2%; padding-bottom: 8%;padding-top: 1%;border-radius: 100%;">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.9994292929!2d4.531707674367849!3d7.789883607154359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x10378742fd3a63c9%3A0xf06d2e43b7a5ff56!2sOroki%20Innovation%20Hub!5e0!3m2!1sen!2sng!4v1761057396880!5m2!1sen!2sng" width="600" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </section>
  <footer class="bg-[#000a7c] text-white py-14 px-6 font-sans">
   <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-10">
     <div>
