--- a/Home/index.html
+++ b/Home/index.html
@@ -144,12 +144,17 @@
   </div>
 </section>
 <section>
+  <h3 class="svs">Digital Skills Training</h3>
   <div class="flex-service-container">
     <div class="flex-service-container-1">
-      <div>
-        <h3></h3>
+      <div class="flex-service-container-1a">
+        <img src="C:\Users\Owner\Pictures\Screenshot 2025-10-22 142411.png" alt="icon 1">
+        <h3 class="dst">Digital Skills Training</h3>
+        <p>Training in coding, STEM, design,<br>
+           marketing, and emerging technologies<br>
+           for youth and students.</p>
       </div>
-      <div></div>
+      <div class="flex-service-container-1b"></div>
     </div>
     <div class="flex-service-container-2">
       <div></div>
